--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Spirax');
+
+h1 {
+    font-family: 'Spirax', cursive;
+}
+
 body {
     background-image: url("../images/194.jpg")
 }
